[chromium] scrolling is broken with compositor thread https://bugs.webkit.org/show_bug.cgi?id=72059

Reviewed by James Robinson.

No new test. Existing test CCLayerTreeHostImplTest.scrollDeltaRepeatedScrolls checks scroll deltas are applied
on the right layer.

* platform/graphics/chromium/cc/CCLayerTreeHostImpl.h:
(WebCore::CCLayerTreeHostImpl::scrollLayer):
* platform/graphics/chromium/cc/CCThreadProxy.cpp:
(WebCore::CCThreadProxy::beginFrameCompleteOnImplThread):
Instead of calling on the root layer which doesn't have scroll delta applied. Change this to scrollLayer()
which actually has scroll delta.

Canonical link: https://commits.webkit.org/88502@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@99942 268f45cc-cd09-0410-ab3c-d52691b4dbfc