Source/WebCore/platform/graphics/chromium/cc/CCLayerTreeHostImpl.h
@@ -86,6 +86,8 @@ public:
     CCLayerImpl* rootLayer() const { return m_rootLayerImpl.get(); }
     void setRootLayer(PassRefPtr<CCLayerImpl>);
 
+    CCLayerImpl* scrollLayer() const { return m_scrollLayerImpl.get(); }
+
     bool visible() const { return m_visible; }
     void setVisible(bool);
     void setHaveWheelEventHandlers(bool haveWheelEventHandlers) { m_haveWheelEventHandlers = haveWheelEventHandlers; }
